# proba-it-lasc

./: README.md
server/: .env.example  Cargo.toml
server/.sqlx/: query-043121bc07a98c226c821076127a39cca9f3cf41f0a0577e4172882120d80f94.json  query-1e95faf9ff6113f070d71015cf07294d23a16441a43164f348ca4bbc0f141674.json  query-32568457417078e2d472502f3a1f3038e7d7382f73328f1989ae8b88d4a65d94.json  query-420a0d0f8be0e5ac2b074586fb7be70693c7397203509abad70332af04d195e8.json  query-58bb21825aab711ee52dbf22aec11a93a3dff12693b1bd5eca091c41a51b0d07.json  query-5ff349a2387030e9a65a8b69e9c4e7cdadb2bcb93f12c4094f5741622161d83d.json  query-83a99fd2782d510e05f4ba643ab1fa77f39ce7bc0d84bb504bfbe791481d2e17.json  query-849752ce98f7e26b8782e56e606c4588044755c05ad66ab0d6aefe5b2af011d7.json  query-849d7546ba8ed7dfca375ce1bc4cde090166b0979cd2e136c62ea4b96fa74f17.json  query-9b11dda6c2243a1e44330185cd3c40bf8ae5f7e573fd8ee086eb8b2be3eac45e.json  query-a3114281b25afaaf6f73b8398167893fbd4fb7c02682d569031872707faa93c9.json  query-aa9629ca12537a689d03881b0d28fff881729f8810bc0ac596ff8be3a7649c4c.json  query-b799eb5cfbe27ecb57fd5a9451b904a6a9670fb9d6ed3339b9d9b7d2f5598868.json  query-bbe6ec593d08ef714ed6713051a8ee1b0ed9f0b7b7fa817aa7f14e13d1644fd5.json  query-ee95f0a6c84b9f1483fa851ad89baf8c1d87fb54d8d8a577c1223ee826b4b03c.json  query-f2acb2f0c587e4b0c58034af9a8ff42fc5dcf9ab6faa1dfe116934b987940249.json  query-f94c6de9f6e56148440ea1747242a35d0b1fde08f2962225a73d760dd6ed2f8f.json  query-fab27959e49fa15c991b3705e6c9c3bcc9606e9bd40abfb503a70cb667acb6ff.json  (+1 more)
server/src/: db.rs  main.rs
(+40 files in other folders)
