[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
argon2 = "0.5.3"
axum = { version = "0.7.9", features = ["json"] }
axum-extra = { version = "0.9.6", features = ["cookie"] }
dotenvy = "0.15.7"
email_address = "0.2.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "time"] }
time = "0.3.36"
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }

[dev-dependencies]
axum-test = "16.4.0"
rand = "0.8.5"
